--- a/sysctl.conf
+++ b/sysctl.conf
@@ -1,12 +1,20 @@
 ####### /etc/sysctl.conf
 
 ### PARAMETERS
+#hw.smt=0
+hw.smt=1
 #kern.bufcachepercent=20
-kern.bufcachepercent=40
+kern.bufcachepercent=60
+#kern.maxfiles=7030
+kern.maxfiles=65535
 #kern.maxproc=1310
 kern.maxproc=32768
 #kern.maxthread=2620
 kern.maxthread=4096
+#kern.maxvnodes=62734 
+kern.maxvnodes=262144
+#kern.somaxconn=128  
+kern.somaxconn=2048
 #net.bpf.bufsize=32768
 net.bpf.bufsize=1048576
 #net.inet.icmp.errppslimit=100
