--- a/sysctl.conf
+++ b/sysctl.conf
@@ -6,22 +6,27 @@ ddb.panic=0
 #hw.smt=0
 hw.smt=1
 #kern.bufcachepercent=20
-kern.bufcachepercent=40
+kern.bufcachepercent=90
 #kern.maxfiles=7030
-#kern.maxfiles=8192
-kern.maxfiles=32768
+kern.maxfiles=65535
 #kern.maxproc=1310
-kern.maxproc=8192
+kern.maxproc=32768
 #kern.maxthread=2620
 kern.maxthread=16384
 #kern.maxvnodes=62734
 kern.maxvnodes=262144
 #kern.nosuidcoredump=1
 kern.nosuidcoredump=3
-#kern.seminfo.semmns=60
-kern.seminfo.semmns=4096
 #kern.seminfo.semmni=10
 kern.seminfo.semmni=1024
+#kern.seminfo.semmns=60
+kern.seminfo.semmns=4096
+#kern.seminfo.semmnu=30
+kern.seminfo.semmnu=1024
+#kern.seminfo.semmsl=60
+kern.seminfo.semmsl=1024
+#kern.seminfo.semopm=100
+kern.seminfo.semopm=1024
 #kern.shminfo.shmall=8192
 kern.shminfo.shmall=536870912
 #kern.shminfo.shmmax=33554432
@@ -35,19 +40,23 @@ kern.somaxconn=2048
 #machdep.allowaperture=0
 machdep.allowaperture=1
 #net.bpf.bufsize=32768
-net.bpf.bufsize=1048576
+net.bpf.bufsize=2097152
+#net.bpf.maxbufsize=2097152
+net.bpf.maxbufsize=4194304
 #net.inet.icmp.errppslimit=100
 net.inet.icmp.errppslimit=1000
 #net.inet.ip.arpq.maxlen=50
 net.inet.ip.arpq.maxlen=256
 #net.inet.ip.forwarding=0
 net.inet.ip.forwarding=1
+#net.inet.ip.maxqueue=300
+net.inet.ip.maxqueue=2048
 #net.inet.ipcomp.enable=0
 net.inet.ipcomp.enable=1
 #net.inet.ip.mtudisc=1
 net.inet.ip.mtudisc=0
-#net.inet.ip.multipath=0
-net.inet.ip.multipath=1
+net.inet.ip.multipath=0
+#net.inet.ip.multipath=1
 #net.inet.tcp.mssdflt=512
 net.inet.tcp.mssdflt=1440
 #net.inet.udp.recvspace=41600
@@ -58,5 +67,7 @@ net.inet6.ip6.forwarding=0
 #net.inet6.ip6.forwarding=1
 #vm.malloc_conf=
 vm.malloc_conf=CFGU
+
+####### END
 
 ####### END
